# coinsignal

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pm2.config.js
configs/grafana/: fix_influxdb.sh
configs/grafana/provisioning/dashboards/: Binance.json  CoinMarketCap.json  Ethereum.json  FundingRate.json  Global.json  Trade.json  dashboard.yml
configs/grafana/provisioning/datasources/: influxdb.yml
configs/nginx/: default.conf
containers/logstash/: Dockerfile
containers/logstash/config/: pipelines.yml
containers/logstash/pipeline/: candlestick_ext.conf  cmc_global_metrics.conf  eth_block_header.conf  eth_gas_price.conf
ethereum-crawlers/: Cargo.toml
go/: go.mod  go.sum
go/cmd/cmc_global_metrics/: main.go
go/cmd/cmc_price_crawler/: main.go
go/cmd/crawler_block_header/: main.go
go/cmd/crawler_eth_price/: main.go
go/cmd/crawler_gas_price/: main.go
go/cmd/crawler_mark_price/: main.go
go/cmd/data_shipper/: main.go
go/cmd/ftx_spot_price/: main.go
go/config/: config.go
go/pojo/: block_header.go  currency_price.go  gas_price.go  mark_price.go
go/pubsub/: publisher.go  subscriber.go
go/utils/: influxdb_ready.go  price_cache.go  price_updater.go  redis_ping.go  unix_ms.go
nodejs/ethereum-crawlers/: .eslintrc.js  package.json  pm2.config.js
nodejs/ethereum-crawlers/src/: cli.ts
nodejs/ethereum-crawlers/src/crawlers/: common.ts  crawler_block_header.ts  crawler_cmc_metrics.ts  crawler_eth_price.ts  crawler_gas_price.ts
nodejs/ethereum-crawlers/src/transform/: eth_miner_revenue.ts
nodejs/utils/: .eslintrc.js  .prettierignore  jest.config.json  package.json  tsconfig.json
nodejs/utils/src/: index.ts  redis_cache.ts
nodejs/utils/src/pubsub/: publisher.ts  subscriber.ts
nodejs/utils/tests/: hello.spec.ts
rust/: Cargo.toml
rust/crypto-crawlers/: Cargo.toml
rust/crypto-crawlers/src/: constants.rs
rust/transform/: Cargo.toml
rust/transform/src/: constants.rs
rust/utils/: Cargo.toml
rust/utils/src/: lib.rs  price_cache.rs  price_updater.rs  redis.rs
rust/utils/src/pubsub/: subscriber.rs
transform/: Cargo.toml
utils/src/pubsub/: mod.rs  publisher.rs  subscriber.rs
