[package]
name = "crypto-crawlers"
version = "0.1.1"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-crawler = "1.4.4"
crypto-msg-parser = "1.0.4"
env_logger = "0.8"
log = "0.4"
serde_json = "1.0"
utils = { path = "../utils" }
