[package]
name = "transform"
version = "0.1.1"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-market-type = "0.1.8"
crypto-msg-parser = "1.6.1"
env_logger = "0.9"
lazy_static = "1"
log = "0.4"
redis = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utils = { path = "../utils" }
