[package]
name = "utils"
version = "0.1.2"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-msg-parser = "2.8.8"
log = "0.4.17"
redis = "0.22.1"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
